# dl2-replication

./: .gitignore  .gitmodules  Untitled.ipynb  flake.nix
dl2-jax/: .envrc  pyproject.toml
dl2-jax/dl2/: config.py  diffsat.py
dl2-jax/dl2/query/: api.py
dl2-jax/dl2/query/lang/: syntax.py
dl2-jax/tests/: diffsat_test.py  syntax_test.py
nix/: dl2-jax.nix  format.nix  python.nix  shells.nix
