[tool.poetry]
name = "dl2"
version = "0.1.0"
description = "Deep Learning with Differentiable Logic"
authors = ["Quinn Dougherty <quinnd@riseup.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jax = "^0.4.25"
jaxlib = "^0.4.25"
jaxtyping = "^0.2.28"
einops = "^0.7.0"

[tool.poetry.dev-dependencies]
pytest = "^8.1.1"
hypothesis = "^6.99.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
